--- a/VVP_Project.ipynb
+++ b/VVP_Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bludiste je resitelne\n"
+     ]
+    }
+   ],
    "source": [
-    "mazefile = \"maze_2.csv\"\n",
+    "mazefile = \"data\\maze_2.csv\"\n",
     "maze = mz.nactiBludiste(mazefile)      \n",
     "possible = mz.IsMaze(maze)\n",
     "if(possible==False):\n",
@@ -60,9 +68,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------\n",
+      "|  ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ |\n",
+      "|        ■ ■             ■ ■ ■ ■       ■ |\n",
+      "|■   ■         ■         ■             ■ |\n",
+      "|■ ■   ■ ■ ■ ■   ■ ■ ■       ■     ■ ■ ■ |\n",
+      "|■ ■ ■       ■ ■ ■ ■   ■     ■         ■ |\n",
+      "|■ ■   ■ ■ ■ ■   ■ ■ ■   ■ ■ ■     ■   ■ |\n",
+      "|■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     ■ |\n",
+      "|■ ■   ■ ■ ■   ■ ■ ■       ■ ■ ■ ■     ■ |\n",
+      "|■   ■ ■       ■       ■             ■ ■ |\n",
+      "|■ ■ ■ ■   ■       ■ ■ ■   ■ ■   ■ ■ ■ ■ |\n",
+      "|■ ■ ■     ■ ■   ■     ■ ■ ■   ■ ■ ■   ■ |\n",
+      "|■ ■ ■   ■ ■ ■ ■   ■   ■ ■ ■ ■   ■   ■ ■ |\n",
+      "|■           ■           ■       ■ ■ ■ ■ |\n",
+      "|■   ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ |\n",
+      "|■   ■     ■ ■ ■ ■ ■             ■     ■ |\n",
+      "|■       ■       ■     ■ ■ ■     ■ ■ ■ ■ |\n",
+      "|■     ■ ■           ■ ■ ■     ■ ■   ■ ■ |\n",
+      "|■ ■       ■   ■ ■ ■ ■           ■     ■ |\n",
+      "|■ ■ ■ ■       ■ ■   ■ ■ ■             ■ |\n",
+      "|■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■     |\n",
+      "------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "if(possible==True):\n",
     "    mz.printMaze(maze)"
@@ -78,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "if(possible==True):\n",
     "    inmat, nodes = mz.makeIncidencniMatice(maze)\n",
-    "    print(inmat,\"\\n\",nodes)"
+    "    #print(inmat,\"\\n\",nodes)"
    ]
   },
   {
@@ -97,9 +134,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------\n",
+      "|. ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ |\n",
+      "|. . . . ■ ■ . . . . . . ■ ■ ■ ■       ■ |\n",
+      "|■   ■ . . . . ■       . ■ . . . .     ■ |\n",
+      "|■ ■   ■ ■ ■ ■   ■ ■ ■ . . . ■   . ■ ■ ■ |\n",
+      "|■ ■ ■       ■ ■ ■ ■   ■     ■   . . . ■ |\n",
+      "|■ ■   ■ ■ ■ ■   ■ ■ ■   ■ ■ ■     ■ . ■ |\n",
+      "|■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ . . ■ |\n",
+      "|■ ■   ■ ■ ■   ■ ■ ■ . . . ■ ■ ■ ■ .   ■ |\n",
+      "|■   ■ ■ . . . ■ . . . ■ . . . . . . ■ ■ |\n",
+      "|■ ■ ■ ■ . ■ . . . ■ ■ ■   ■ ■   ■ ■ ■ ■ |\n",
+      "|■ ■ ■ . . ■ ■   ■     ■ ■ ■   ■ ■ ■   ■ |\n",
+      "|■ ■ ■ . ■ ■ ■ ■   ■   ■ ■ ■ ■   ■   ■ ■ |\n",
+      "|■ . . .     ■           ■       ■ ■ ■ ■ |\n",
+      "|■ . ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ |\n",
+      "|■ . ■     ■ ■ ■ ■ ■ . . . . .   ■     ■ |\n",
+      "|■ . .   ■       ■ . . ■ ■ ■ .   ■ ■ ■ ■ |\n",
+      "|■   . ■ ■   . . . . ■ ■ ■   . ■ ■   ■ ■ |\n",
+      "|■ ■ . . . ■ . ■ ■ ■ ■       . . ■     ■ |\n",
+      "|■ ■ ■ ■ . . . ■ ■   ■ ■ ■     . . . . ■ |\n",
+      "|■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■ . . |\n",
+      "------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "if(possible==True):\n",
     "    path = mz.DijkstraFindPath(inmat,nodes)\n",
@@ -116,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,24 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "grid\n",
       "--------------------\n",
-      "|. ■               |\n",
-      "|. ■   ■   ■   ■   |\n",
-      "|. . . . . . . . . |\n",
-      "|  ■ ■ ■ ■ ■ ■ ■ . |\n",
-      "|          ■   ■ . |\n",
-      "|  ■ ■ ■ ■ ■ ■ ■ . |\n",
-      "|                . |\n",
-      "|  ■   ■ ■ ■ ■ ■ . |\n",
-      "|  ■           ■ . |\n",
+      "|. . .             |\n",
+      "|■ ■ . ■   ■   ■   |\n",
+      "|. . . ■           |\n",
+      "|. ■ ■ ■ ■ ■ ■ ■   |\n",
+      "|. . . . .         |\n",
+      "|  ■ ■ ■ . ■ ■ ■ ■ |\n",
+      "|        . . . . . |\n",
+      "|■ ■ ■ ■   ■ ■ ■ . |\n",
+      "|  ■       ■     . |\n",
       "--------------------\n"
      ]
     }
@@ -187,55 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "mz.mazePathToImg(mazegen,pathgen,\"maze2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------\n",
-      "|                  |\n",
-      "|■ ■ ■ ■ ■ ■ ■ ■   |\n",
-      "|                  |\n",
-      "|  ■ ■ ■ ■ ■ ■ ■ ■ |\n",
-      "|                  |\n",
-      "|■ ■ ■ ■ ■ ■ ■ ■   |\n",
-      "|                  |\n",
-      "|  ■ ■ ■ ■ ■ ■ ■ ■ |\n",
-      "|                  |\n",
-      "--------------------\n",
-      "--------------------\n",
-      "|. . . . . . . . . |\n",
-      "|■ ■ ■ ■ ■ ■ ■ ■ . |\n",
-      "|. . . . . . . . . |\n",
-      "|. ■ ■ ■ ■ ■ ■ ■ ■ |\n",
-      "|. . . . . . . . . |\n",
-      "|■ ■ ■ ■ ■ ■ ■ ■ . |\n",
-      "|. . . . . . . . . |\n",
-      "|. ■ ■ ■ ■ ■ ■ ■ ■ |\n",
-      "|. . . . . . . . . |\n",
-      "--------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "mazegen1=mz.generateMaze(9,9,\"snake\")\n",
-    "mz.printMaze(mazegen1)\n",
-    "inmatgen1, nodesgen1=mz.makeIncidencniMatice(mazegen1)\n",
-    "pathgen1=mz.DijkstraFindPath(inmatgen1,nodesgen1)\n",
-    "\n",
-    "mz.printMazePath(mazegen1,pathgen1)\n",
-    "mz.mazePathToImg(mazegen1,pathgen1,\"mazeSnake\")"
    ]
   },
   {
